enabled basic location toggling per chat TODOs: 1) Add custom message instead of toggle 2) Fix issue: marker not showing when toggled from userListFragment

--- a/app/src/main/res/menu/chatroom_menu.xml
+++ b/app/src/main/res/menu/chatroom_menu.xml
@@ -12,4 +12,11 @@
         android:id="@+id/action_chatroom_leave"
         android:title="@string/action_leave_chatroom"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_toggle_share_location"
+        android:title="@string/toggle_location"
+        app:showAsAction="never" />
+
+
 </menu>
