--- a/app/src/main/res/layout/activity_chatroom.xml
+++ b/app/src/main/res/layout/activity_chatroom.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/White">
 
     <RelativeLayout
@@ -55,7 +53,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/user_list_container">
+        android:id="@+id/chatroom_fragment_container">
 
     </FrameLayout>
 
