--- a/app/src/main/res/layout/fragment_users_in_chat_list.xml
+++ b/app/src/main/res/layout/fragment_users_in_chat_list.xml
@@ -1,62 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/White">
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/White"
         android:orientation="vertical"
-        android:weightSum="100"
-        android:background="@color/White">
+        android:weightSum="100">
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/user_list_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="50"
-            android:id="@+id/user_list_recycler_view">
+            android:layout_weight="50">
 
         </android.support.v7.widget.RecyclerView>
 
         <RelativeLayout
+            android:id="@+id/map_container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="50"
-            android:id="@+id/map_container">
+            android:layout_weight="50">
 
-            <com.google.android.gms.maps.MapView
-                xmlns:android="http://schemas.android.com/apk/res/android"
+            <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/user_list_map"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/user_list_map" />
+                android:layout_height="match_parent" />
 
             <ImageButton
+                android:id="@+id/btn_full_screen_map"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:src="@drawable/ic_full_screen_black_24dp"
-                android:background="@color/White"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp"
-                android:id="@+id/btn_full_screen_map"/>
+                android:layout_marginRight="10dp"
+                android:background="@color/White"
+                android:src="@drawable/ic_full_screen_black_24dp" />
 
 
             <ImageButton
+                android:id="@+id/btn_reset_map"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:src="@drawable/ic_refresh_black_24dp"
-                android:background="@color/White"
-                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
+                android:layout_alignParentLeft="true"
                 android:layout_marginStart="10dp"
-                android:id="@+id/btn_reset_map"/>
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/White"
+                android:src="@drawable/ic_refresh_black_24dp" />
 
         </RelativeLayout>
 
@@ -64,10 +61,10 @@
     </LinearLayout>
 
     <ProgressBar
+        android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
         android:layout_centerInParent="true"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </RelativeLayout>
