--- a/app/src/main/res/layout/layout_chat_message_list_item_current.xml
+++ b/app/src/main/res/layout/layout_chat_message_list_item_current.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:padding="10dp">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="12sp"
@@ -14,8 +15,8 @@
         android:textColor="@color/green1"
         app:layout_constraintRight_toRightOf="parent" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.text.emoji.widget.EmojiAppCompatTextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:textColor="@color/Black"
@@ -24,4 +25,4 @@
         android:layout_marginTop="5dp"
         android:id="@+id/chat_message_message"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
