--- a/app/src/main/res/layout/layout_chat_message_list_item_other.xml
+++ b/app/src/main/res/layout/layout_chat_message_list_item_other.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="10dp">
 
     <TextView
         android:id="@+id/chat_message_username"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/blue2"
         android:textSize="12sp"
         android:textStyle="bold" />
 
-    <TextView
+    <android.support.text.emoji.widget.EmojiAppCompatTextView
         android:id="@+id/chat_message_message"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:textColor="@color/Black"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@+id/chat_message_username" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
