--- a/app/src/main/res/layout/layout_chat_message_list_item_current.xml
+++ b/app/src/main/res/layout/layout_chat_message_list_item_current.xml
@@ -1,28 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="10dp">
 
     <TextView
+        android:id="@+id/chat_message_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="12sp"
-        android:id="@+id/chat_message_username"
         android:textColor="@color/green1"
+        android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintRight_toRightOf="parent" />
 
     <android.support.text.emoji.widget.EmojiAppCompatTextView
+        android:id="@+id/chat_message_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:textColor="@color/Black"
-        app:layout_constraintTop_toBottomOf="@+id/chat_message_username"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="5dp"
-        android:id="@+id/chat_message_message"/>
+        android:textColor="@color/Black"
+        android:textSize="14sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chat_message_username" />
+
+    <ImageView
+        android:id="@+id/chat_message_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chat_message_message" />
 
 </LinearLayout>
