--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,8 +2,8 @@
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
 
     <external-path
-        name="Images"
-        path="Android/data/com.purpura.googlemaps2018/files/Images" />
+        name="images"
+        path="." />
 
 
 </paths>
