--- a/app/src/main/res/layout/layout_chat_message_list_item_other.xml
+++ b/app/src/main/res/layout/layout_chat_message_list_item_other.xml
@@ -23,4 +23,13 @@
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@+id/chat_message_username" />
 
+
+    <ImageView
+        android:id="@+id/chat_message_image"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chat_message_message" />
+
 </LinearLayout>
