Rename, Delete and (partially) Find, ChatMessage Parcelable

--- a/app/src/main/res/menu/chatroom_menu.xml
+++ b/app/src/main/res/menu/chatroom_menu.xml
@@ -17,8 +17,25 @@
         android:id="@+id/action_toggle_share_location"
         android:title="@string/toggle_location"
         app:showAsAction="never" />
+
     <item
-        android:id="@+id/action_add_user_to_chatroom"
+        android:id="@+id/action_chatroom_delete"
+        android:title="@string/delete_chatroom"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_chatroom_rename"
+        android:title="@string/rename_chatroom"
+        app:showAsAction="never" />
+
+
+    <item
+        android:id="@+id/action_chatroom_find"
+        android:title="@string/rename_chatroom"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_chatroom_add_user"
         android:title="@string/add_user_to_chatroom"
         app:showAsAction="never" />
 
