--- a/app/src/main/res/layout/layout_chat_message_list_item_other.xml
+++ b/app/src/main/res/layout/layout_chat_message_list_item_other.xml
@@ -3,8 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+
     android:orientation="vertical"
-    android:padding="10dp">
+
+    android:paddingTop="15dp"
+
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
+    android:background="@color/red3"
+    android:layout_marginBottom="5dp">
+    <!--android:weightSum="2"-->
 
     <TextView
         android:id="@+id/chat_message_username"
@@ -26,8 +34,9 @@
 
     <ImageView
         android:id="@+id/chat_message_image"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chat_message_message" />
