--- a/app/src/main/res/layout/private_checkbox.xml
+++ b/app/src/main/res/layout/private_checkbox.xml
@@ -1,8 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="25dp">
 
     <EditText
         android:id="@+id/chatRoomName"
@@ -21,4 +23,30 @@
             android:layout_margin="5dp" />
 
     </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/txtAgeLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Allowed ages from" />
+
+        <EditText
+            android:id="@+id/edit_age_from"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/edit_age_to"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number" />
+
+    </LinearLayout>
+
 </LinearLayout>
