--- a/app/src/main/res/layout/activity_chatroom.xml
+++ b/app/src/main/res/layout/activity_chatroom.xml
@@ -1,19 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/White">
 
+    <ToggleButton
+        android:id="@+id/location_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:checked="false"
+        android:gravity="center"
+        android:text="@string/share_location"
+        android:textOff="@string/location_disabled"
+        android:textOn="@string/location_enabled" />
+    />
+
     <RelativeLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="40dp"
-        >
+        android:layout_marginBottom="40dp">
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/chatmessage_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/chatmessage_recycler_view">
+            android:layout_height="match_parent">
 
 
         </android.support.v7.widget.RecyclerView>
@@ -21,40 +35,64 @@
     </RelativeLayout>
 
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:background="@drawable/grey_border_top">
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_check_green_24dp"
-            android:id="@+id/checkmark"/>
 
         <android.support.text.emoji.widget.EmojiAppCompatEditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:id="@+id/input_message"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="8dp"
             android:background="@null"
-            android:layout_toLeftOf="@+id/checkmark"
             android:gravity="center_vertical"
-            android:textSize="14sp"
-            android:hint="new message..."
+            android:hint="@string/enter_message_hint"
             android:textColor="@color/Black"
-            android:layout_marginLeft="5dp"/>
+            android:textSize="14sp"
+            app:layout_constraintRight_toLeftOf="@+id/btnCamera"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/btnCamera"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="5dp"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/ic_camera_alt_black_48dp"
+            app:layout_constraintRight_toLeftOf="@id/btnGallery"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/btnGallery"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="5dp"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/ic_image_black_48dp"
+            app:layout_constraintRight_toLeftOf="@id/checkmark"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/checkmark"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="5dp"
+            android:src="@drawable/ic_send_black_48dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 
 
     <FrameLayout
+        android:id="@+id/chatroom_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/chatroom_fragment_container">
+        android:layout_height="match_parent">
 
     </FrameLayout>
 
