--- a/app/src/main/res/layout/layout_chat_message_list_item_other.xml
+++ b/app/src/main/res/layout/layout_chat_message_list_item_other.xml
@@ -1,26 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:background="@drawable/rounded_corner"
+    android:layout_marginBottom="5dp">
+    <!--android:weightSum="2"-->
 
     <TextView
         android:id="@+id/chat_message_username"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/blue2"
+        android:textColor="@color/Black"
         android:textSize="12sp"
         android:textStyle="bold" />
 
     <android.support.text.emoji.widget.EmojiAppCompatTextView
         android:id="@+id/chat_message_message"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:textColor="@color/Black"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@+id/chat_message_username" />
+
+
+    <ImageView
+        android:id="@+id/chat_message_image"
+        android:layout_width="150dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:visibility="gone"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chat_message_message" />
 
 </LinearLayout>
