--- a/app/src/main/res/layout/switch_layout.xml
+++ b/app/src/main/res/layout/switch_layout.xml
@@ -4,10 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <Switch
+    <android.support.v7.widget.SwitchCompat
         android:id="@+id/switchForActionBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:checked="false"
+        android:text="SwitchCompat (SDK v7+)"
+        android:textOff="OFF"
+        android:textOn="ON"
+        android:showText="true" />
 
 </RelativeLayout>
