--- a/app/src/main/res/layout/layout_chat_message_list_item_other.xml
+++ b/app/src/main/res/layout/layout_chat_message_list_item_other.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
 
+    android:layout_marginBottom="5dp"
+
+
+
     android:orientation="vertical"
-
-    android:paddingTop="15dp"
-
+    android:background="@drawable/chat_bubble"
     android:paddingLeft="15dp"
-    android:paddingRight="15dp"
-    android:background="@color/red3"
-    android:layout_marginBottom="5dp">
+    android:paddingTop="15dp"
+    android:paddingRight="15dp">
     <!--android:weightSum="2"-->
 
     <TextView
