Added PredictedReviewRating and Summarize functionalities

--- a/app/src/main/res/layout/fragment_chatroom_map.xml
+++ b/app/src/main/res/layout/fragment_chatroom_map.xml
@@ -15,7 +15,8 @@
             android:id="@+id/chatroom_map_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="50">
+            android:layout_weight="50"
+            android:paddingTop="50dp">
 
         </android.support.v7.widget.RecyclerView>
 
