--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,6 +13,11 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_chatroom_map_list"
+        android:title="@string/action_chatroom_map_list"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_enable_nearby"
         android:title="@string/action_enable_nearby"
         app:showAsAction="never" />
@@ -22,6 +27,5 @@
         android:title="@string/action_enable_nearby"
         app:showAsAction="ifRoom"
         app:actionLayout="@layout/switch_layout" />
-
 
 </menu>
